--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <a href="/auth">djjdjdjd</a>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
